// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routing Table Tests fill in details for a route: updated route 1`] = `
<div>
  <table
    class="bp3-html-table bp3-interactive routingTable"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          ACTION
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        />
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="bp3-overlay bp3-overlay-inline"
            >
              <div
                class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
              >
                <div
                  class="bp3-popover bp3-minimal bp3-select-popover"
                  style="transform-origin: center top;"
                >
                  <div
                    class="bp3-popover-content"
                  >
                    <div>
                      <ul
                        class="bp3-menu"
                      >
                        <li
                          class="Select--menuItem Select--active"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                            style="--text-line-clamp: 1;"
                          >
                            http
                          </p>
                        </li>
                        <li
                          class="Select--menuItem"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                            style="--text-line-clamp: 1;"
                          >
                            https
                          </p>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="80"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="Forward"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="8080"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <span
            class="bp3-icon bp3-icon-trash StyledProps--main"
            icon="trash"
          >
            <svg
              data-icon="trash"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                trash
              </desc>
              <path
                d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Routing Table Tests render additional columns for redirection rule 1`] = `
<div>
  <table
    class="bp3-html-table bp3-interactive routingTable"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          ACTION
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          REDIRECT URL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          SERVER NAME
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          PATH MATCH
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        />
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="https"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="81"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="Redirect"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="8081"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="redirect_url"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="server_name"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="routing_rules"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <span
            class="bp3-icon bp3-icon-trash StyledProps--main"
            icon="trash"
          >
            <svg
              data-icon="trash"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                trash
              </desc>
              <path
                d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Routing Table Tests render table with default columns 1`] = `
<div>
  <table
    class="bp3-html-table bp3-interactive routingTable"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          LISTEN PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          ACTION
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PROTOCOL
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        >
          TARGET PORT
        </th>
        <th
          colspan="1"
          role="columnheader"
          style="width: 16.5%;"
        />
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="80"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="Forward"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="bp3-popover-wrapper selectCell Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="http"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <div
            class="TextInput--main"
          >
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                type="text"
                value="8080"
              />
            </div>
          </div>
        </td>
        <td
          role="cell"
        >
          <span
            class="bp3-icon bp3-icon-trash StyledProps--main"
            icon="trash"
          >
            <svg
              data-icon="trash"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                trash
              </desc>
              <path
                d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
